# Oni2Rebuilt

./: .gitignore  ARCHITECTURE_SUGGESTIONS.md  Cargo.toml  README.md  diff.txt
docs/: publishing.md  scroni_roadmap.md
game/: Cargo.toml  README.md  compile.txt
game/src/: dave_vfs.rs  fx_system.rs  main.rs  menu.rs  projectile_system.rs  test_bevy.rs  vfs.rs
game/src/ai/: components.rs  mod.rs  systems.rs
game/src/camera/: components.rs  mod.rs  systems.rs
game/src/combat/: components.rs  events.rs  hitbox.rs  mod.rs  systems.rs
game/src/filesystem/: dave_vfs.rs  mod.rs  vfs.rs
game/src/hud/: mod.rs  systems.rs
game/src/oni2_loader/: animation.rs  components.rs  curve.rs  environment.rs  layout_loader.rs  mod.rs  registries.rs  spawn.rs  testanim.rs
game/src/oni2_loader/parsers/: actor_xml.rs  animation.rs  anims.rs  bound.rs  camera.rs  effect.rs  entity_type.rs  jump.rs  layout.rs  loco.rs  mesh.rs  mod.rs  model.rs  particle.rs  projectile.rs  settings.rs  skeleton.rs  texture.rs  types.rs
game/src/oni2_loader/utils/: binary.rs  bone.rs  mod.rs  parse.rs
game/src/player/: components.rs  mod.rs  systems.rs
game/src/scroni/: ast.rs  compiler.rs  mod.rs  token.rs  tokenizer.rs  vm.rs
game/src/telemetry/: bridge.rs  mod.rs  systems.rs
game/src/weapons/: components.rs  mod.rs  systems.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml  build.rs
shared/proto/: telemetry.proto
shared/src/: arrow_schema.rs  events.rs  lib.rs
